<resources>
    <string name="app_name">GithubS2</string>
    <string name="user_name">User Name</string>
    <string name="user_office">User Office</string>
    <string name="user_location">User Location</string>
    <string name="user_repository">User Repository</string>

    <string name="n_follower">%s Follower</string>
    <string name="n_following">%s Following</string>
    <string name="search_hint">Find Username</string>
    <string name="empty_user_list">Empty User List</string>
    <string name="action_button_back">action button back</string>
    <string name="foto_user">Photo User</string>
    <string name="languange_select">Change Language</string>
    <string name="welcome">Welcome!</string>
    <string name="total_follower">total follower</string>
    <string name="total_following">total following</string>
    <string name="daily_reminder">On/Off Daily Reminder</string>
    <string name="toast_setReminder">Daily Reminder has been set at 9 AM everyday</string>
    <string name="toast_unsetReminder">Daily Reminder has been turned off</string>
    <string name="notif_Message"> Check us! and If u want to rest, walk. Just dont stop making progress! </string>
    <string name="favorite_user">Favorite User</string>
    <string name="refresh_favorite_list">refresh favorite list</string>


</resources>